--- a/lib/generators/blog_assets/templates/config/blog_kit.yml
+++ b/lib/generators/blog_assets/templates/config/blog_kit.yml
@@ -17,7 +17,7 @@ gravatar: true
 anonymous_comments: true
 
 # User Markdown for parsing posts
-use_markdown: true
+use_markdown: false
 
 # Only enabled if you don't use markdown
 # html_editor: true
@@ -28,7 +28,7 @@ admin_layout: 'application'
 theme: 'mac_classic'
 
 # Link to the default user path (/users/[id])
-link_to_user: true
+link_to_user: false
 
 # Show line numbers next to code
 show_link_numbers: false
