--- a/lib/generators/blog_assets/templates/config/blog_kit.yml
+++ b/lib/generators/blog_assets/templates/config/blog_kit.yml
@@ -23,7 +23,7 @@ use_markdown: false
 # html_editor: true
 
 layout: 'application'
-admin_layout: 'application'
+admin_layout: 'cms'
 
 theme: 'mac_classic'
 
